Added the code for the homepage, and the test nodes
Added the nodes to show the algorithm, and an script to:

1. Pick a random position for the start / ending point.

2. If the user hold down the left mouse button, and hovers over the node, the background gets black (what indicates that it is a wall).

--- a/css/styling.css
+++ b/css/styling.css
@@ -45,3 +45,14 @@ nav button:focus{
 
 
 /* /Navigation styling */
+
+.div-center{
+    display: table; 
+    margin: auto;
+}
+
+.node{
+    display: inline-block;
+    padding: 7.5px;
+    border-style: solid;    
+}
