Changed the nodes board, and added the functionallity for the run button
Added:

The user can now choose an algorithm, and that gets shown on the run button.

Changed:

The layout of the nodes board.

--- a/css/styling.css
+++ b/css/styling.css
@@ -51,8 +51,20 @@ nav button:focus{
     margin: auto;
 }
 
-.node{
-    display: inline-block;
+
+.node:not(.start-node):not(.end-node){
+    width: 15px;
+    height:15px;
     padding: 7.5px;
-    border-style: solid;    
+}  
+
+.start-node,
+.end-node{
+    width: 19px;
+    height:19px;
+}
+
+.node{
+    float: left;
+    border: 2px solid; 
 }
