Added the next node color in the css file

--- a/css/styling.css
+++ b/css/styling.css
@@ -70,9 +70,12 @@ nav button:focus{
     background-color: #dc3545;
 }
 
-
 #found{
     background-color: #007bff;
+}
+
+#next{
+    background-color: slateblue;
 }
 
 
