Don't change end element to next color when added

--- a/css/styling.css
+++ b/css/styling.css
@@ -60,7 +60,7 @@ td:not(#start):not(#end) {
     background-color: lightskyblue;
 }
 
-.next {
+.next:not(#end) {
     background-color: lightpink;
 }
 
@@ -75,6 +75,4 @@ td:not(#start):not(#end) {
 #updateLayout[disabled] {
     color: red;
 }
-
-
 /* /Settings */
