Set clear board button to red when disabled

--- a/css/styling.css
+++ b/css/styling.css
@@ -72,7 +72,8 @@ td:not(#start):not(#end) {
 
 /* Settings */
 #run[disabled],
-#updateLayout[disabled] {
+#updateLayout[disabled],
+#clearBoard[disabled] {
     color: red;
 }
 /* /Settings */
