Changed "td" to ".cell" / added cell info styling
* Updated "td" to ".cell" to set the cell stylings.
* Set style information cells to max width 24.

--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -1,8 +1,12 @@
-td {
+.cellInformation .cell {
+    max-width: 24px;
+}
+
+.cell {
     padding: 12px;
 }
 
-td:has(svg) {
+.cell:has(svg) {
     padding: 0px;
     text-align: center;
 }
