--- a/src/styling/board.scss
+++ b/src/styling/board.scss
@@ -3,41 +3,41 @@
     height: 3.5vh;
     border: 1px solid black;
 
-    &[data-type='start'],
-    &[data-type='end'],
+    &.start,
+    &.end,
     &[data-weight='10'] {
         background-position: center;
         background-repeat: no-repeat;
         background-size: 75%;
     }
 
-    &[data-type='start'] {
-        background-image:url('../svg/start.svg');
+    &.start {
+        background-image:url('cellIcons/start.svg');
         background-color: #28a745;
     }
 
-    &[data-type='end'] {
-        background-image:url('../svg/end.svg');
+    &.end {
+        background-image:url('cellIcons/end.svg');
         background-color: #dc3545;
     }
 
     &[data-weight='10'] {
-        background-image:url('../svg/weightTen.svg');
+        background-image:url('cellIcons/weightTen.svg');
     }
 
-    &[data-type='wall'] {
+    &.wall {
         background-color: #343a40;
     }
 
-    &[data-type='visited'] {
+    &.visited {
         background-color: lightskyblue;
     }
 
-    &[data-type='queued'] {
+    &.queued {
         background-color: lightpink;
     }
 
-    &[data-type='fastest'] {
+    &.fastest {
         background-color: yellow;
     }
 }
